Trying to isolate the agent class loader.